--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,13 @@ img{
 
 /* ABOUT SECTION */
 
+.ms_about-section{
+    background-color: var(--bg-verde);
+    height: 1000px;
+}
+
+.ms_container{
+    max-width: 800px;
+    min-width: 300px;
+    margin: 0 auto;
+}
