--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,14 @@
     height: 250px;
 }
 
+.ms_hr{
+    width: 150px;
+    height: 4px;
+    background-color: white;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
 /* PORTFOLIO SECTION (CARD) */
 
 
@@ -50,6 +58,10 @@
 
 #ms_btn{
     background-color: var(--bg-verde);
+}
+
+.ms_start{
+    color: var(--bg-verde);
 }
 
 /* FOOTER */
