--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
     background-color: white;
     margin-right: 20px;
     margin-left: 20px;
+    border-radius: 4px;
 }
 
 /* PORTFOLIO SECTION (CARD) */
